add email notification

--- a/config.conf
+++ b/config.conf
@@ -19,3 +19,6 @@ Debugging = False
 [advanced]
 LIVESTREAMER = livestreamer
 Disable_wishlist = False
+[email]
+From = test@example.com
+To = test@example.com
