make sending email optional

--- a/config.conf
+++ b/config.conf
@@ -20,5 +20,6 @@ Debugging = False
 LIVESTREAMER = livestreamer
 Disable_wishlist = False
 [email]
+Enable = True
 From = test@example.com
 To = test@example.com
